--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,585 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  width: 100vw;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Get rid of Autofill styles */
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 0s 600000s, color 0s 600000s;
+}
+
+/* Keyframes & Animation Class*/
+@keyframes reveal {
+  from {
+    opacity: 0.25;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.revealing-text {
+  animation: auto linear reveal both;
+  animation-timeline: view();
+  animation-range: entry 25% cover 50%;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #150235;
+  /* position: sticky; */
+  padding: 0 2.5em;
+  top: 0;
+  max-width: 100%;
+  height: 7em;
+  z-index: 7;
+}
+
+nav > ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+  justify-self: flex-end;
+  padding: 0;
+  z-index: 1;
+}
+
+nav > ul > li > a {
+  color: white;
+  font-size: 1.1em;
+  text-decoration: none;
+}
+
+nav > button {
+  display: none;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  background-image: url(./background.png);
+  background-size: cover;
+  max-width: 100vw;
+  min-height: 75vh;
+  padding-top: 5em;
+}
+
+main > h1,
+h2 {
+  margin: 0;
+  color: rgba(255, 255, 255, 0.856);
+  font-size: 2.75em;
+  padding: 1em 0;
+  text-shadow: 0 0 0.1em #201b2c99;
+  text-align: center;
+}
+
+main > .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #524572;
+  width: 60%;
+  gap: 1em;
+  padding: 1em 1em 5em 1em;
+  border-radius: 1.5em 1.5em 0 0;
+  /* box-shadow: 0 -10px 100px 20px #201b2c99; */
+  z-index: 0;
+}
+
+main > .container > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+main > .container > img {
+  width: 100%;
+  max-width: 450px;
+  margin: 2em;
+  border-radius: 1em;
+  box-shadow: 0 0 25px 5px #201b2c99;
+  margin-top: 4em;
+}
+
+main > .container > div > p {
+  color: rgba(255, 255, 255, 0.856);
+  font-size: 1.5em;
+  font-weight: 300;
+  text-align: start;
+  padding: 0.5em 4em;
+  margin: 0;
+}
+
+main > .container > div > p > ul > li {
+  margin-top: 0.75em;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  background-color: #150235;
+  padding: 0;
+  margin: 0;
+  color: white;
+  max-width: 100%;
+  height: 10em;
+  box-shadow: 0 -10px 100px 20px #524572;
+  z-index: 1;
+}
+
+footer > p {
+  margin: 0;
+}
+
+.socials {
+  display: flex;
+  gap: 1em;
+  font-size: 1.5em;
+}
+
+/* Why S.Y specific styles */
+
+.why-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./Why1.png);
+  background-size: cover;
+  width: 100vw;
+  height: 40em;
+}
+
+.why-top p {
+  width: 30em;
+  background-color: #1502357a;
+  width: 30em;
+  padding: 2em 4em;
+  font-size: 1.5em;
+  color: white;
+  text-wrap: balance;
+  text-align: center;
+  line-height: 1.5em;
+}
+
+.why-section {
+  display: flex;
+  flex-direction: row;
+  min-height: 40em;
+  border: 5px solid white;
+}
+
+.why-section-flip {
+  display: flex;
+  flex-direction: row-reverse;
+  min-height: 40em;
+  border: 5px solid white;
+}
+
+.section-paragraph {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50vw;
+  text-align: center;
+  background-image: url(./background.png);
+  background-size: cover;
+}
+
+.section-paragraph > p {
+  width: 20em;
+  background-color: #1502357a;
+  padding: 2em;
+  font-size: 1.25em;
+  color: white;
+  text-wrap: balance;
+  text-align: center;
+  line-height: 1.5em;
+}
+
+.section-paragraph > h2 {
+  text-align: center;
+  width: 10em;
+}
+
+.section-picture {
+  width: 50vw;
+}
+
+.section-picture > img {
+  height: 100%;
+  max-height: 50em;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* Download Specific styles */
+
+.download {
+  min-height: 60vh;
+  display: flex;
+  flex-direction: row;
+}
+
+.download-paragraph {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./background.png);
+  background-size: cover;
+  min-height: 60vh;
+  width: 50%;
+}
+
+.download-paragraph > .container {
+  width: 25em;
+  padding: 5em 0;
+}
+
+.download-paragraph > .container > p {
+  font-size: 1.25em;
+  line-height: 1.75em;
+  color: white;
+  text-align: center;
+}
+
+.download-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./background.png);
+  background-size: cover;
+  min-height: 60vh;
+  width: 50%;
+}
+
+.download-form > .container > form > h3 {
+  text-align: center;
+}
+
+.download-form > .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #5c41a0d8;
+  width: 100%;
+  height: 100%;
+}
+
+.download-form > .container > form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+  background-color: #150235;
+  color: white;
+  font-size: 1.25em;
+  padding: 2em;
+  width: 15em;
+  border-radius: 0.5em;
+  filter: drop-shadow(0 0 10px #150235);
+}
+
+.input-text {
+  margin: 0;
+  padding: 0.5em 0.5em 0.25em 0;
+  border: none;
+  border-bottom: 0.15em solid white;
+  background-color: #150235;
+  color: white;
+  font-size: 0.8em;
+  outline-style: none;
+}
+
+.input-text::focus {
+  outline: none;
+}
+
+.invest-radios {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-check > label {
+  font-size: 0.65em;
+}
+
+.download-form > .container > form > button {
+  color: white;
+  width: 5em;
+  background-color: #524572;
+  border: none;
+  font-size: 1.5em;
+  align-self: center;
+  padding: 0.25em;
+  border-radius: 0.5em;
+  margin: 0.5em 0 0 0;
+  transition: background-color ease-in 200ms;
+}
+.download-form > .container > form > button:hover {
+  background-color: #8c7eaf;
+}
+
+/* FAQ Styles */
+
+.faq {
+  min-height: 80vh;
+  display: flex;
+}
+
+.faq-left,
+.faq-right {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./background.png);
+  background-size: cover;
+}
+
+.faq-left > .container {
+  width: 20em;
+  text-align: center;
+}
+
+.faq-left > .container > p {
+  font-size: 1.25em;
+  line-height: 1.75em;
+  color: white;
+  text-align: center;
+}
+
+.faq-right > .container {
+  width: 20em;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #5c41a0d8;
+  width: 100%;
+  height: 100%;
+}
+
+.questions {
+  width: 50%;
+  height: 600px;
+  overflow-y: scroll;
+  background-color: #15023554;
+  color: white;
+  border: 1.5em solid #15023500;
+  filter: drop-shadow(0 0 10px #150235);
+}
+
+.questions::-webkit-scrollbar {
+  display: none;
+}
+
+.question {
+  display: flex column;
+  justify-content: center;
+  align-items: center;
+}
+
+.question > p {
+  text-align: left;
+  text-wrap: balance;
+  width: 80%;
+  margin: 1em auto;
+}
+
+.question > .arrow-button {
+  padding: 0 0 0 0;
+  margin: 0;
+  background: none;
+  color: white;
+  font-size: 1em;
+  border: none;
+  transition: rotate linear 100ms;
+  transform-origin: 50% 48%;
+}
+
+.button-rotate {
+  rotate: -180deg;
+  transition: rotate linear 200ms;
+}
+
+.answer {
+  overflow: hidden;
+}
+
+.reveal {
+  height: fit-content;
+  opacity: 1;
+}
+
+.hide {
+  height: 0;
+  opacity: 1;
+}
+
+@media screen and (max-width: 900px) {
+  nav {
+    min-height: 3em;
+  }
+
+  nav > button {
+    margin: 0;
+    padding: 0;
+    font-size: 1.85em;
+    display: inline;
+    position: absolute;
+    right: 0.5em;
+    color: rgba(255, 255, 255, 0.863);
+    background: none;
+    border: none;
+    transform-origin: 50% 46.5%;
+  }
+
+  nav > img {
+    position: absolute;
+    height: 5em;
+    left: 0.5em;
+    z-index: 19;
+  }
+  .nav-list {
+    display: none;
+  }
+
+  .show-list {
+    display: block;
+    text-align: right;
+    position: absolute;
+    right: 0;
+    top: 6em;
+    background-color: #150235;
+    padding: 1em;
+  }
+
+  .show-list > li {
+    padding: 0.5em;
+    z-index: 4;
+  }
+
+  main {
+    padding: 1em 0;
+  }
+
+  main > .container {
+    width: 85%;
+    padding: 1em;
+  }
+
+  main > .container > img {
+    margin: 2em 0 0 0;
+    width: 80%;
+  }
+
+  main > h1,
+  h2 {
+    font-size: 2em;
+  }
+
+  main > .container > div > p {
+    font-size: 1.25em;
+    text-align: center;
+    padding: 0 0.5em;
+  }
+
+  /* Why Us */
+
+  .why-top > p {
+    width: 90%;
+    max-height: 60%;
+    font-size: 1em;
+    padding: 1em 2em;
+  }
+
+  .why-section,
+  .why-section-flip {
+    flex-direction: column;
+    border: 0;
+  }
+
+  .section-paragraph,
+  .section-picture {
+    width: 100%;
+  }
+  .section-paragraph > p {
+    padding: 1em;
+    width: 80vw;
+  }
+
+  /* Download */
+
+  .download {
+    flex-direction: column;
+  }
+
+  .download-paragraph,
+  .download-form {
+    width: 100vw;
+  }
+
+  .download-paragraph {
+    height: 30em;
+  }
+
+  .download-paragraph > .container > p {
+    font-size: 1em;
+    padding: 0 0.5em;
+  }
+
+  .download-form > .container {
+    padding: 2em 0;
+    box-shadow: 0 -5px 10px 5px #52457273;
+  }
+
+  /* FAQ  */
+
+  .faq {
+    flex-direction: column;
+  }
+
+  .faq-left {
+    height: 30em;
+  }
+
+  .faq-left,
+  .faq-right {
+    width: 100vw;
+  }
+
+  .faq-right > .container {
+    padding: 2em;
+  }
+
+  .faq-right > .container > .questions {
+    width: 300px;
+    min-height: 30em;
+    max-height: 40em;
+  }
 }
